--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -2,7 +2,7 @@
     margin: 0;
     padding: 0;
     box-sizing: border-box;
-    border: 1px solid blue;
+    
     font-family: monospace;
 }
 
@@ -13,14 +13,20 @@ p {
 
 button {
     outline: none;
-    background-color: orange;
     font-size: 30px;
-    
+    font-weight: 900;
+    background: linear-gradient(90deg, rgb(18,92,255) 0%, rgb(0,102,255),100%);
+    border-radius: 4px;
 }
 
 h1,h2 {
     font-size: 30px;
     text-align: center;
+}
+
+li {
+    list-style: none;
+
 }
 
 .outer-container {
@@ -44,8 +50,12 @@ h1,h2 {
     justify-content: center;
 }
 
-.quiz-home {
+
+.quiz-home, main {
     margin-bottom: 10%;
+    margin-left: 10%;
+    margin-right: 10%;
+    
 }
 
 .quiz-home button {
@@ -53,3 +63,19 @@ h1,h2 {
     margin: 0 auto;
 }
 
+main{
+    display: none;
+}
+
+.questions-screen {
+    display: none;
+}
+
+.quiz-finish {
+    display: none;
+}
+
+.highscores-screen {
+    display: block;
+
+}
